{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 56,
  "lineage": "ace7166e-d850-df78-4aa4-c8e262e77e63",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-085940bc04ca902c4",
            "domain": "vpc",
            "id": "eipalloc-0a9364afdf469e19e",
            "network_interface": "eni-06e3ed3b9c1e6fce8",
            "private_dns": "ip-15-255-0-69.us-west-2.compute.internal",
            "private_ip": "15.255.0.69",
            "public_dns": "ec2-44-228-255-58.us-west-2.compute.amazonaws.com",
            "public_ip": "44.228.255.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tenant2-ecs-fargate-nat-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0078fa19c76b12743",
            "domain": "vpc",
            "id": "eipalloc-09b0cfad3f7663272",
            "network_interface": "eni-06bf2ff1219b864ac",
            "private_dns": "ip-15-255-1-55.us-west-2.compute.internal",
            "private_ip": "15.255.1.55",
            "public_dns": "ec2-54-191-222-222.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.222.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tenant2-ecs-fargate-nat-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:internet-gateway/igw-04de8de2ca91a1fa2",
            "id": "igw-04de8de2ca91a1fa2",
            "owner_id": "437642037048",
            "tags": {
              "Name": "tenant2-ecs-fargate"
            },
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "tenant2-s3-lb-log-ecs-fargate-437642037048",
                "enabled": true,
                "prefix": "test"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:loadbalancer/app/tenant2-dev-fargate-lb/3c2974c7bb5ef6ec",
            "arn_suffix": "app/tenant2-dev-fargate-lb/3c2974c7bb5ef6ec",
            "dns_name": "tenant2-dev-fargate-lb-1591602859.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:437642037048:loadbalancer/app/tenant2-dev-fargate-lb/3c2974c7bb5ef6ec",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tenant2-dev-fargate-lb",
            "security_groups": [
              "sg-0a7d2c2ec9dea93d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02bf6db851a70051e"
              },
              {
                "subnet_id": "subnet-0ae5fa89b29700372"
              }
            ],
            "subnets": [
              "subnet-02bf6db851a70051e",
              "subnet-0ae5fa89b29700372"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tenant2"
            },
            "vpc_id": "vpc-05dd8a3330da24bad",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:listener/app/tenant2-dev-fargate-lb/3c2974c7bb5ef6ec/42ec51a0c4eb82ac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ok",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:437642037048:listener/app/tenant2-dev-fargate-lb/3c2974c7bb5ef6ec/42ec51a0c4eb82ac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:loadbalancer/app/tenant2-dev-fargate-lb/3c2974c7bb5ef6ec",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:targetgroup/tenant2-dev-fargate-lb/be996744717ce8ff",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:listener-rule/app/tenant2-dev-fargate-lb/3c2974c7bb5ef6ec/42ec51a0c4eb82ac/7a47ebc43b5ab866",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:437642037048:listener-rule/app/tenant2-dev-fargate-lb/3c2974c7bb5ef6ec/42ec51a0c4eb82ac/7a47ebc43b5ab866",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:listener/app/tenant2-dev-fargate-lb/3c2974c7bb5ef6ec/42ec51a0c4eb82ac",
            "priority": 1
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.default",
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:437642037048:targetgroup/tenant2-dev-fargate-lb/be996744717ce8ff",
            "arn_suffix": "targetgroup/tenant2-dev-fargate-lb/be996744717ce8ff",
            "deregistration_delay": 600,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 200,
                "matcher": "200",
                "path": "/management/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:437642037048:targetgroup/tenant2-dev-fargate-lb/be996744717ce8ff",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tenant2-dev-fargate-lb",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tenant2"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9364afdf469e19e",
            "id": "nat-041a6017d21ccb7d4",
            "network_interface_id": "eni-06e3ed3b9c1e6fce8",
            "private_ip": "15.255.0.69",
            "public_ip": "44.228.255.58",
            "subnet_id": "subnet-02bf6db851a70051e",
            "tags": {
              "Name": "tenant2-ecs-fargate-0"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b0cfad3f7663272",
            "id": "nat-08522c0993b297529",
            "network_interface_id": "eni-06bf2ff1219b864ac",
            "private_ip": "15.255.1.55",
            "public_ip": "54.191.222.222",
            "subnet_id": "subnet-0ae5fa89b29700372",
            "tags": {
              "Name": "tenant2-ecs-fargate-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:network-acl/acl-0b0e8e74d1b32398e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b0e8e74d1b32398e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "437642037048",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-05b0faa18593d00bd",
              "subnet-0ffed4fa5dd15dc00"
            ],
            "tags": {
              "Name": "tenant2-ecs-fargate-private"
            },
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:network-acl/acl-009bddff026f68cdf",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-009bddff026f68cdf",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "437642037048",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-02bf6db851a70051e",
              "subnet-0ae5fa89b29700372"
            ],
            "tags": {
              "Name": "tenant2-ecs-fargate-public"
            },
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2060689820",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b0e8e74d1b32398e",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2719862611",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b0e8e74d1b32398e",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2646102966",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-009bddff026f68cdf",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2034330999",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-009bddff026f68cdf",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0100886ba11d8bef41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-041a6017d21ccb7d4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0100886ba11d8bef4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.default",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07652fdcf4894253d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-08522c0993b297529",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07652fdcf4894253d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.default",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04de8de2ca91a1fa2",
            "id": "r-rtb-0332031d9794781b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0332031d9794781b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0100886ba11d8bef4",
            "owner_id": "437642037048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-041a6017d21ccb7d4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tenant2-ecs-fargate-private-0"
            },
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07652fdcf4894253d",
            "owner_id": "437642037048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08522c0993b297529",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tenant2-ecs-fargate-private-1"
            },
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0332031d9794781b8",
            "owner_id": "437642037048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04de8de2ca91a1fa2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tenant2-ecs-fargate-public"
            },
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093b8bb02d8ec42cd",
            "route_table_id": "rtb-0100886ba11d8bef4",
            "subnet_id": "subnet-05b0faa18593d00bd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012436277fbe3362e",
            "route_table_id": "rtb-07652fdcf4894253d",
            "subnet_id": "subnet-0ffed4fa5dd15dc00"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021a0b6457407b7d4",
            "route_table_id": "rtb-0332031d9794781b8",
            "subnet_id": "subnet-02bf6db851a70051e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0191a053b0ad8641c",
            "route_table_id": "rtb-0332031d9794781b8",
            "subnet_id": "subnet-0ae5fa89b29700372"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:security-group/sg-0765e9c9c3d7a49e4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0765e9c9c3d7a49e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tenant2-dev-task-definition-ecs-fargate",
            "name_prefix": null,
            "owner_id": "437642037048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tenant2-dev-task-definition-ecs-fargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:security-group/sg-0a7d2c2ec9dea93d5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7d2c2ec9dea93d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tenant2-dev-fargate-lb-alb",
            "name_prefix": null,
            "owner_id": "437642037048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tenant2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-rds-sg",
      "provider": "module.rds.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:security-group/sg-0fa9f1b71e705b59e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa9f1b71e705b59e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-rds-sg",
            "name_prefix": null,
            "owner_id": "437642037048",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2564303047",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0765e9c9c3d7a49e4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.ecs_fargate.aws_security_group.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-564293928",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a7d2c2ec9dea93d5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-1792338343",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0765e9c9c3d7a49e4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_lb.default",
            "module.alb.aws_lb_target_group.default",
            "module.alb.aws_security_group.default",
            "module.ecs_fargate.aws_security_group.default",
            "module.s3_access_log.aws_s3_bucket.default",
            "module.s3_lb_log.aws_s3_bucket.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-859459606",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a7d2c2ec9dea93d5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-rds-sg-rule",
      "provider": "module.rds.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-996934693",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fa9f1b71e705b59e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds.aws_security_group.my-rds-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_rule",
      "provider": "module.rds.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2490266124",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fa9f1b71e705b59e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.rds.aws_security_group.my-rds-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:subnet/subnet-05b0faa18593d00bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "15.255.2.0/24",
            "id": "subnet-05b0faa18593d00bd",
            "map_public_ip_on_launch": false,
            "owner_id": "437642037048",
            "tags": {
              "Name": "tenant2-ecs-fargate-private-0"
            },
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:subnet/subnet-0ffed4fa5dd15dc00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "15.255.3.0/24",
            "id": "subnet-0ffed4fa5dd15dc00",
            "map_public_ip_on_launch": false,
            "owner_id": "437642037048",
            "tags": {
              "Name": "tenant2-ecs-fargate-private-1"
            },
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:subnet/subnet-02bf6db851a70051e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "15.255.0.0/24",
            "id": "subnet-02bf6db851a70051e",
            "map_public_ip_on_launch": true,
            "owner_id": "437642037048",
            "tags": {
              "Name": "tenant2-ecs-fargate-public-0"
            },
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:subnet/subnet-0ae5fa89b29700372",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "15.255.1.0/24",
            "id": "subnet-0ae5fa89b29700372",
            "map_public_ip_on_launch": true,
            "owner_id": "437642037048",
            "tags": {
              "Name": "tenant2-ecs-fargate-public-1"
            },
            "vpc_id": "vpc-05dd8a3330da24bad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:437642037048:vpc/vpc-05dd8a3330da24bad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "15.255.0.0/16",
            "default_network_acl_id": "acl-0d590ada62a875ea2",
            "default_route_table_id": "rtb-069a514127db35822",
            "default_security_group_id": "sg-004df411c2445af94",
            "dhcp_options_id": "dopt-7115b809",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05dd8a3330da24bad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-069a514127db35822",
            "owner_id": "437642037048",
            "tags": {
              "Name": "tenant2-ecs-fargate"
            }
          }
        }
      ]
    }
  ]
}